# static-linking

./: CMakeLists.txt  my_executable.cpp  my_static_with_singleton.cpp  my_static_with_singleton.h  shared_a.cpp  shared_a.h  shared_b.cpp  shared_b.h
